feat(agent): 新增AI智能体系统核心组件
- 创建AgentFacade门面服务，统一管理智能体功能入口
- 实现群组规划智能体，负责消息逻辑规划与工具调用决策
- 开发群组行动智能体，根据规划结果生成标准化发送动作
- 集成向量存储检索功能，支持历史记忆查询与上下文构建
- 添加行动结果模型定义，规范化消息发送内容结构
- 配置Spring AI与Mirai框架依赖，建立智能体运行环境